# Logistic-Relational-Database

./: .gitignore  README.md  main.py  pyproject.toml  watermark.json
api/: go.mod  main.go  postgres.go
api/cmd/server/: main.go
api/internal/db/: postgres.go
api/internal/handlers/: customers.go  delivery_events.go  drivers.go  facilities.go  fuel_purchases.go  loads.go  maintenance.go  routes.go  safety_incidents.go  trailers.go  trips.go  trucks.go
api/internal/models/: customer.go  delivery_event.go  load.go  (+11 more)
dataset/: customers.csv  driver_monthly_metrics.csv  drivers.csv  facilities.csv  maintenance_records.csv  routes.csv  safety_incidents.csv  trailers.csv  truck_utilization_metrics.csv  trucks.csv
docs/: architecture.md  datacatlog.md  incremental.md
reports/: customer_report.md  truck_report.md
scripts/: README.md  mongo_to_postgres.py
sql/: 01_lp_delete_tables.sql  02_public_tables.sql  03_count.sql  04_fuel_purchase_overview.sql  05_drivers.sql  06_fn_customer_report.sql  06_fn_customers_report.sql  07_fn_drivers_report.sql  08_fn_trucks_report.sql  09_fn_routes_report.sql  10_fn_sales_report.sql  11_fn_facilities_report.sql  12_fn_metrics_reconciliation_report.sql  13_trg_financial_validation.sql  14_lp_operational_feedback.sql  README.md  new.rs  test.rs  test.sql
tests/: 01_proc_customer_data_quality.sql  02_proc_driver_data_quality.sql  03_proc_delivery_events_data_quality.sql  04_proc_loads_data_quality.sql  05_proc_routes_data_quality.sql  06_proc_trucks_data_quality.sql  README.md
utils/: README.md  connection.py  engine.py  logger.py
